--- a/index.html
+++ b/index.html
@@ -160,17 +160,29 @@
 
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="w3-row-padding w3-center">
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="The mist over the mountains">
+            <div class="w3-col m4">
+                <video width="320" height="240" autoplay muted loop>
+                    <source src="videos/gifPortoAdria.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
             </div>
 
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+            <div class="w3-col m4">
+                <video width="320" height="240" autoplay muted loop>
+                    <source src="videos/gifPortoAdria.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
+                <a href="https://portoadria.de" target="_blank">portoadria.de</a>
             </div>
 
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+            <div class="w3-col m4">
+                <video width="320" height="240" autoplay muted loop>
+                    <source src="videos/gifPortoAdria.mp4" type="video/mp4">
+                    <source src="movie.ogg" type="video/ogg">
+                    Your browser does not support the video tag.
+                </video>
             </div>
 
             <div class="w3-col m3">
