--- a/index.html
+++ b/index.html
@@ -163,50 +163,38 @@
             <div class="w3-col m4">
                 <video width="320" height="240" autoplay muted loop>
                     <source src="videos/gifPortoAdria.mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-
-            <div class="w3-col m4">
-                <video width="320" height="240" autoplay muted loop>
-                    <source src="videos/gifPortoAdria.mp4" type="video/mp4">
-                    <source src="movie.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
+                    <source src="videos/portoAdria.mov" type="video/mov">
+                    <source src="videos/Gifportoadria.webm" type="video/webm">
+                    Vaš pregledač/browser ne podržava video zapis.
                 </video>
                 <a href="https://portoadria.de" target="_blank">portoadria.de</a>
             </div>
 
             <div class="w3-col m4">
                 <video width="320" height="240" autoplay muted loop>
+                    <source src="videos/gifCoffeShopEdited.mp4" type="video/mp4">
+                    <source src="videos/quicktimeCoffeeShop.mov" type="video/mov">
+                    <source src="videos/Gifcoffeshopedited.webm" type="video/webm">
+                    Vaš pregledač/browser ne podržava video zapis.
+                </video>
+                <!-- <a href="https://portoadria.de" target="_blank">portoadria.de</a> -->
+            </div>
+
+            <!-- <div class="w3-col m4">
+                <video width="320" height="240" autoplay muted loop>
                     <source src="videos/gifPortoAdria.mp4" type="video/mp4">
                     <source src="movie.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
+                    Vaš pregledač/browser ne podržava video zapis.
                 </video>
-            </div>
+            </div> -->
 
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
-            </div>
-        </div>
-
-        <div class="w3-row-padding w3-center w3-section">
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
-            </div>
-
-            <div class="w3-col m3">
-                <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
-                    alt="My beloved typewriter">
-            </div>
-
-            <div class="w3-col m3">
+            <!-- <div class="w3-col m3">
                 <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
             </div>
 
             <div class="w3-col m3">
                 <img src="" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
-            </div>
+            </div> -->
             <!-- <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">UČITAJ VIŠE</button> -->
         </div>
     </div>
