Google search console verification

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
+    <!-- VERIFICATION -->
+    <meta name="google-site-verification" content="TxXfR505iAaEFyF2x7mHguIrRZnYM41I7YlvRL8IHtY" />
+
     <!-- SEO -->
     <meta name="keywords"
         content="kreiranje sajta, pravljenje sajta, pravljenje sajta za firmu, kako napraviti sajt, programer za sajt, kako napraviti sajt besplatno, izdrada sajta, sajt, sajtova">
