--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Container (About Section) -->
-    <div class="w3-content w3-container w3-padding-64" id="about">
+    <div class="w3-content w3-container w3-padding-64 shadowbox" id="about">
         <h3 class="w3-center">O NAMA</h3>
         <!-- <p class="w3-center"><em>Volimo ono sto radimo!</em></p> -->
         <p>
