Phone number updated

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <p><strong>Idealan izbor za:</strong> Restorane, frizere, i ostala mala preduzeća.</p>
             <p><strong>Trajanje izrade:</strong> 14 dana</p>
             <p><strong>Početna cena:</strong> 350 evra</p>
-            <button class="call" onclick="callPhoneNumber('+381')">POZOVI</button>
+            <button class="call" onclick="callPhoneNumber('+381658696541')">POZOVI</button>
         </div>
     </div>
 
@@ -233,9 +233,8 @@
                 <div class="w3-large w3-margin-bottom w3-margin-top">
                     <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Belgrade,
                     Serbia<br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="tel:+381"
-                        class="w3-hover-text-black"> Telefon: +381
-                        151515</a><br>
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a
+                        href="tel:+381658696541" class="w3-hover-text-black"> Telefon: +381 65 8696541</a><br>
                     <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="mailto:"
                         class="w3-hover-text-black"> Email:
                         mail@mail.com</a><br>
