--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
                     <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a
                         href="tel:+381658696541" class="w3-hover-text-black"> Telefon: +381 65 8696541</a><br>
                     <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="mailto:"
-                        class="w3-hover-text-black"> Email:
-                        mail@mail.com</a><br>
+                        class="w3-hover-text-black"> Email: /</a><br>
                 </div>
             </div>
         </div>
