--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/5a09e74771.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
     <!-- VERIFICATION -->
@@ -247,14 +248,26 @@
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Nazad na
             početak</a>
         <div class="w3-xlarge w3-section">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
+            <a href="https://www.instagram.com/web.majstori/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+            <a href="https://www.tiktok.com/@web.majstori" class="margin-left">
+                <i class="fa-brands fa-tiktok w3-text-white w3-hover-opacity"></i>
+            </a>
         </div>
         <p>Copyright &#169 2024 WebMajstori. Sva prava su zadržana. Developed by WebMajstori</p>
     </footer>
 
     <script src="js/main.js"></script>
+    <!-- <script>
+        window.embeddedChatbotConfig = {
+            chatbotId: "5_5IPGtPa1plUnRORfXnt",
+            domain: "www.chatbase.co"
+        }
+    </script>
+    <script src="https://www.chatbase.co/embed.min.js" chatbotId="5_5IPGtPa1plUnRORfXnt" domain="www.chatbase.co" defer>
+    </script> -->
+    <!-- <iframe src="https://www.chatbase.co/chatbot-iframe/5_5IPGtPa1plUnRORfXnt" title="Darko" width="100%"
+        style="height: 100%; min-height: 700px" frameborder="0"></iframe> -->
+
 </body>
 
 </html>
