--- a/index.html
+++ b/index.html
@@ -234,10 +234,11 @@
                 <div class="w3-large w3-margin-bottom w3-margin-top">
                     <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Belgrade,
                     Serbia<br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a
-                        href="tel:+381658696541" class="w3-hover-text-black"> Telefon: +381 65 8696541</a><br>
-                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="mailto:"
-                        class="w3-hover-text-black"> Email: /</a><br>
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>
+                    <a href="tel:+381658696541" class="w3-hover-text-black"> Telefon: +381 65 8696541</a><br>
+                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>
+                    <a href="mailto:webmajstori.agencija@gmail.com" class="w3-hover-text-black"> Email:
+                        webmajstori.agencija@gmail.com</a><br>
                 </div>
             </div>
         </div>
