--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- SEO -->
     <meta name="keywords"
-        content="kreiranje sajta, pravljenje sajta, pravljenje sajta za firmu, kako napraviti sajt, programer za sajt, kako napraviti sajt besplatno, izdrada sajta, sajt, sajtova, webmajstori">
+        content="kreiranje sajta, pravljenje sajta, pravljenje sajta za firmu, kako napraviti sajt, programer za sajt, kako napraviti sajt besplatno, izrada sajta, sajt, sajtova, webmajstori, webmaster, kreiranje web sajta, izrada web sajta">
     <meta name="description" content="Naša misija je pružiti vam vrhunski dizajn i funkcionalnost kako biste istakli svoju
         kompaniju na online tržištu. Bez obzira da li ste mala firma, velika korporacija ili samostalni preduzetnik, mi smo tu da vam pomognemo da
         ostvarite svoje ciljeve putem interneta.">
