Blog page added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sr">
 
 <head>
-    <title>WebMajstori</title>
+    <title>Izrada sajtova | WebMajstori</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
@@ -62,6 +62,9 @@
                 PROJEKTI</a>
             <a href="#contact" class="w3-bar-item w3-button w3-hide-small text-black"><i class="fa fa-envelope"></i>
                 KONTAKT</a>
+            <a href="blog.html" class="w3-bar-item w3-button w3-hide-small text-black"><i
+                    class="fa-solid fa-shapes"></i>
+                BLOG</a>
             <!-- <button id="languageChange" onclick="changeLanguage()"
                 class="w3-bar-item w3-button w3-hide-small w3-right">Change language:
                 <img id="flag" width="21px" src="img/united-kingdom.png" alt="United Kingdom Flag">
@@ -78,6 +81,9 @@
                 PROJEKTI</a>
             <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-envelope"></i>
                 KONTAKT</a>
+            <a href="blog.html" class="w3-bar-item w3-button" onclick="toggleFunction()"><i
+                    class="fa-solid fa-shapes"></i>
+                BLOG</a>
         </div>
     </div>
 
