Blog meta tag updated

--- a/blog.html
+++ b/blog.html
@@ -19,10 +19,9 @@
 
     <!-- SEO -->
     <meta name="keywords"
-        content="kreiranje sajta, pravljenje sajta, pravljenje sajta za firmu, kako napraviti sajt, programer za sajt, kako napraviti sajt besplatno, izrada sajta, sajt, sajtova, webmajstori, webmaster, kreiranje web sajta, izrada web sajta">
-    <meta name="description" content="Naša misija je pružiti vam vrhunski dizajn i funkcionalnost kako biste istakli svoju
-        kompaniju na online tržištu. Bez obzira da li ste mala firma, velika korporacija ili samostalni preduzetnik, mi smo tu da vam pomognemo da
-        ostvarite svoje ciljeve putem interneta.">
+        content="kreiranje sajta, pravljenje sajta, pravljenje sajta za firmu, kako napraviti sajt, programer za sajt, kako napraviti sajt besplatno, izrada sajta, sajt, sajtova, webmajstori, webmaster, kreiranje web sajta, izrada web sajta, SEO, seo za pocetnike, web dizajn">
+    <meta name="description"
+        content="Otkrijte sve što trebate znati o SEO-u i web dizajnu na našem blogu. Savjeti, trikovi i najnovije vijesti kako biste unaprijedili svoju web stranicu i postigli bolje rezultate na pretraživačima.">
 
     <!-- ICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
