--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 proizvode.</p>
             <p><strong>Idealan izbor za:</strong> Restorane, frizere, i ostala mala preduzeća.</p>
             <p><strong>Trajanje izrade:</strong> 14 dana</p>
-            <p><strong>Početna cena:</strong> 350 evra</p>
+            <p><strong>Početna cena:</strong> 290 &#8364;</p>
             <button class="call" onclick="callPhoneNumber('+381658696541')">POZOVI</button>
         </div>
     </div>
